# SGHUB

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: SESSION_TASKS.md  SGHUB_Architecture_Design_V2.0.1.docx  SGHUB_Architecture_Diagrams_V2.0.1.html  SGHUB_Implementation_Plan_V2.0.1.docx  SGHUB_PRD_V2.0.1.docx  SGHUB_Prototype_V2.0.1.html  code-signing.md  data-management.md  data-model-v201.sql  data-model.sql  i18n-guide.md  release-checklist.md  skill-authoring-guide.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V001__initial_schema.sql  V002__subscription_papers.sql  V004__model_pricing.sql  V005__ai_store_products.sql  V006__sg_ai_store_model_columns.sql  V007__drop_pricing.sql  V008__auth_type.sql  V009__annotations.sql
src-tauri/src/: lib.rs
src-tauri/src/ai_client/: anthropic.rs  mod.rs  ollama.rs  openai.rs  usage.rs  vertex.rs
src-tauri/src/ai_store/: billing.rs  commands.rs  mod.rs  products.rs  sse_listener.rs  sync_strategy.rs
src-tauri/src/chat/: attachment.rs  context.rs  message.rs  mod.rs  session.rs  streaming.rs
src-tauri/src/config/: bootstrap.rs  migration.rs  mod.rs  paths.rs  sources.rs
src-tauri/src/db/: mod.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/notify/: mod.rs
src-tauri/src/pdf_extract/: mod.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/search/: arxiv.rs  core_api.rs  crossref.rs  dblp.rs  doaj.rs  matching.rs  merge.rs  mod.rs  openalex.rs  pubmed.rs  semantic_scholar.rs
src-tauri/src/skill_engine/: generator.rs  mod.rs  uploader.rs
src-tauri/src/subscription/: mod.rs
src-tauri/src/translate/: mod.rs
src-tauri/src/updater/: commands.rs  mod.rs  scheduler.rs
src-tauri/templates/: skill_generator_prompt.md
src-tauri/tests/: parse_with_all_providers.rs  search_matching.rs  search_new_sources.rs
(+127 files in other folders)
