[package]
name = "app"
version = "2.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "devtools"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
refinery = { version = "0.8", features = ["rusqlite"] }
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "stream"] }
roxmltree = "0.20"
keyring = { version = "3", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v7"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
bytes = "1"
serde_yaml = "0.9"
pdf-extract = "0.7"
tokio-cron-scheduler = "0.13"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
minijinja = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
opener = { version = "0.7", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service"] }

[dev-dependencies]
tempfile = "3"
mockito = "1"
